[package]
name = "scaned_server"
version = "0.1.0"
authors = ["jonas <jonas.gastecker@sz-ybbs.ac.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
serde_json = "1.0.61"
serde = "1.0.118"
log = "0.4.11"
env_logger = "0.8.2"
image = "0.23.12"
rand = "0.8.1"
rust_gpiozero = "0.2.0"
rascam = "0.0.2"